# blenderless

./: .bazelrc  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  WORKSPACE.bazel  docker-compose.yml  requirements_lock.txt
.github/workflows/: code-quality.yml  main.yml
blenderless/: geometry.py  io.py  material.py
build_tools/: generate_requirements.sh  repositories.bzl
build_tools/blender_builder/: Dockerfile  build.sh
