workspace(name = "blenderless")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "098ba13578e796c00c853a2161f382647f32eb9a77099e1c88bc5299333d0d6e",
    strip_prefix = "rules_python-1.9.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/1.9.0/rules_python-1.9.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python3_12",
    python_version = "3.12",
)

load("@rules_python//python:pip.bzl", "pip_parse")
load("@python3_12//:defs.bzl", python_interpreter_target = "interpreter")

pip_parse(
    name = "pip_deps",
    python_interpreter_target = python_interpreter_target,
    requirements_lock = "//:requirements_lock.txt",
)

load(
    "@pip_deps//:requirements.bzl",
    "install_deps",
)

install_deps()

load("//build_tools:repositories.bzl", "blenderless_repositories")

blenderless_repositories()
